--- a/template/index.html
+++ b/template/index.html
@@ -6,6 +6,7 @@
     <title>Dashboard</title>
     <link rel="stylesheet" href="./style/style.css">
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
 <body>
     <div class="d-flex" id="wrapper">
@@ -14,7 +15,7 @@
         <div class="bg-light border-right side-nav" id="sidebar-wrapper">
           <div class="sidebar-heading">Start Bootstrap </div>
           <div class="list-group list-group-flush">
-            <a href="#" class="list-group-item list-group-item-action bg-light">Dashboard</a>
+            <a href="#" class="list-group-item list-group-item-action bg-light"><i class="fa fa-pencil" aria-hidden="true"></i>Dashboard</a>
             <a href="#" class="list-group-item list-group-item-action bg-light">Shortcuts</a>
             <a href="#" class="list-group-item list-group-item-action bg-light">Overview</a>
             <a href="#" class="list-group-item list-group-item-action bg-light">Events</a>
@@ -57,15 +58,15 @@
             </div>
           </nav>
     
-          <div class="container-fluid">
+          <div class="container-fluid dashboard">
             <div class="page-header row col-12 col-sm-4">
                 <span class="text-uppercase page-subtitle">Dashboard</span>
                 <h3 class="page-title">Blog Overview</h3>
             </div>
           </div>
-          <div class="container-fluid ">
+          <div class="container-fluid box ">
               <div class="row">
-                  <div class="col-lg-2 col-md-6 col-sm-6 md-4">
+                  <div class="col-lg-2 col-md-4 col-sm-6">
                     <div class="card text-center post" style="width: 12rem;">
                         <div class="card-body ">
                           
@@ -75,21 +76,18 @@
                         </div>
                       </div>
                   </div>
-                  <div class="col-lg-2 col-md-6 col-sm-6 md-4">
+                  <div class="col-lg-2 col-md-4 col-sm-6">
                     <div class="card text-center post" style="width: 12rem;">
                         <div class="card-body ">
-                          
                           <span class="title">PAGES</span>
-                          
                           <h5 class="card-title">182</h5>
-                          
                           <span class="stats-small__percentage stats-small__percentage--increase"> <img src="./image/download.svg" alt="" srcset=""> 4.7%</span>
                         
                         </div>
                         
                       </div>
                   </div>
-                  <div class="col-lg-2 col-md-6 col-sm-6 md-4">
+                  <div class="col-lg-2 col-md-4 col-sm-6 ">
                     <div class="card text-center post " style="width: 12rem;">
                         <div class="card-body">
                             <span class="title">COMMENTS</span>
@@ -98,7 +96,7 @@
                         </div>
                       </div>
                   </div>
-                  <div class="col-lg-2 col-md-6 col-sm-6 md-4">
+                  <div class="col-lg-2 col-md-4 col-sm-6">
                       <div class="card text-center post" style="width: 12rem;">
                     <div class="card-body">
                         <span class="title">USERS</span>
@@ -107,7 +105,7 @@
                       
                     </div>
                   </div></div>
-                  <div class="col-lg-2 col-md-6 col-sm-6 md-4">
+                  <div class="col-lg-2 col-md-4 col-sm-6">
                     <div class="card text-center post " style="width: 12rem;">
                         <div class="card-body">
                             <span class="title">SUBSCRIBERS</span>
