--- a/template/style/style.css
+++ b/template/style/style.css
@@ -9,15 +9,13 @@ body{
   
 }
 .header .header-one{
-    width: 110%;
+    width: 109.60%;
 }
-.header .down{
+/* .header .down{
     /* height: 3.45rem;
     background-color: #ffff;
     box-shadow: 0 2px 0 rgba(90,97,105,.11), 0 4px 8px rgba(90,97,105,.12), 0 10px 10px rgba(90,97,105,.06), 0 7px 70px rgba(90,97,105,.1) ;
 border-left: 0.5px solid lightgrey; */
-
-}
 .header-two{
     
     background-color: white; 
@@ -42,7 +40,7 @@ border-left: 0.5px solid lightgrey; */
 .side-nav{
     width: 16%;
     box-shadow: 0 5px 0 rgba(90,97,105,.11), 0 4px 8px rgba(90,97,105,.12), 0 10px 10px rgba(90,97,105,.06), 0 7px 70px rgba(90,97,105,.1) ;
-
+    height: 41rem;
 }
 .dashboard{
     margin-top: 21px;
