--- a/template/style/style.css
+++ b/template/style/style.css
@@ -3,24 +3,47 @@ body{
     background-color: rgb(172, 177, 187);
    
 }
+.total{
+    margin-left: 216px;
+}
 .header{
     /* box-shadow: 0 2px 0 rgba(90,97,105,.11), 0 4px 8px rgba(90,97,105,.12), 0 10px 10px rgba(90,97,105,.06), 0 7px 70px rgba(90,97,105,.1) ; */
   height: 3.35rem;
-  
-}
+  }
 .header .header-one{
-    width: 107.99%;
+    width: 105%;
 }
-/* .header .down{
-    /* height: 3.45rem;
-    background-color: #ffff;
-    box-shadow: 0 2px 0 rgba(90,97,105,.11), 0 4px 8px rgba(90,97,105,.12), 0 10px 10px rgba(90,97,105,.06), 0 7px 70px rgba(90,97,105,.1) ;
-border-left: 0.5px solid lightgrey; */
+.header-one .bell-icon .b-icon{
+    padding-right: 18px;
+    margin-top: 15px;
+    font-size: 20px;
+     color: #abb6bf;
+    }
+    .header-one .bell-icon .badge{
+        position: absolute;
+        top: 48%;
+        font-size: 8px;
+        right: 11.56%;
+    }
+    .header-one .bell-icon {
+     
+     border-left: #abb6bf solid 1px;
+    }
+    .header-one .bell-icon .b-bor{
+        border-left: 1px solid #abb6bf;
+        padding-left: 20px;
+    }
 .header-two{
-    
     background-color: white; 
     box-shadow: 0 2px 0 rgba(90,97,105,.11), 0 4px 8px rgba(90,97,105,.12), 0 10px 10px rgba(90,97,105,.06), 0 7px 70px rgba(90,97,105,.1) ;
-
+}  
+.header-one .down h6{
+    margin-top: 14px;
+    margin-left: 5px;
+}
+.header-one .down{
+    border-left: 1px solid lightgray;
+    margin-right:27px ;
 }
 .input-group .searchengin{
     height: 3.256rem;
@@ -41,6 +64,9 @@ border-left: 0.5px solid lightgrey; */
     width: 13.5rem;
     box-shadow: 0 5px 0 rgba(90,97,105,.11), 0 4px 8px rgba(90,97,105,.12), 0 10px 10px rgba(90,97,105,.06), 0 7px 70px rgba(90,97,105,.1) ;
     height: 41rem;
+    position: fixed;
+    top: 0;
+    left: 0;
     
     
 }
@@ -112,6 +138,35 @@ max-height: 7.9rem;
     box-shadow: 0 5px 0 rgba(90,97,105,.11), 0 4px 8px rgba(90,97,105,.12), 0 10px 10px rgba(90,97,105,.06), 0 7px 70px rgba(90,97,105,.1) ;
 margin-top: 20px;
 margin-left: 40px;
+}
+.deliver{
+    margin-left: 40px;
+}
+.client-list-login{
+    box-shadow: 0 5px 0 rgba(90,97,105,.11), 0 4px 8px rgba(90,97,105,.12), 0 10px 10px rgba(90,97,105,.06), 0 7px 70px rgba(90,97,105,.1) ;
+margin-left: 20px;
+margin-top: 20px;
+width: 105%;
+border: 5px solid white;
+background-image: url("../image/food.jpg");
+background-size: cover;
+}
+.creat-a{
+    box-shadow: 0 5px 0 rgba(90,97,105,.11), 0 4px 8px rgba(90,97,105,.12), 0 10px 10px rgba(90,97,105,.06), 0 7px 70px rgba(90,97,105,.1) ;
+
+    margin-top: 20px;
+    margin-left: 40px;
+    background-image: url("../image/food.jpg");
+    background-size: cover;
+}
+.creat-a h4{
+    font-size: 50px;
+    margin-left: 75px;
+    margin-top: 12rem;
+    font-weight: 700;
+}
+.table-one{
+    margin-left: 20px;
 }
 
  
