dashboard-chart-tables

--- a/template/index.html
+++ b/template/index.html
@@ -15,9 +15,9 @@
         <div class=" border-right side-nav" id="sidebar-wrapper">
           <div class="sidebar-heading text-center side-header">Start Bootstrap </div>
           <div class="list-group list-group-flush">
-            <a href="#" class="list-group-item list-group-item-action  side-nav-one"><i class="fa fa-pencil side-icon" aria-hidden="true"></i>Dash board</a>
-            <a href="#" class="list-group-item list-group-item-action  side-nav-one"><i class="fa fa-tasks side-icon" aria-hidden="true"></i>Short cuts</a>
-            <a href="#" class="list-group-item list-group-item-action  side-nav-one"><i class="fa fa-file-text-o side-icon" aria-hidden="true"></i>Over view</a>
+            <a href="index.html" class="list-group-item list-group-item-action  side-nav-one"><i class="fa fa-pencil side-icon" aria-hidden="true"></i>Dash board</a>
+            <a href="total file/tabel.html" class="list-group-item list-group-item-action  side-nav-one"><i class="fa fa-tasks side-icon" aria-hidden="true"></i>Short cuts</a>
+            <a href="totel file/foodlist.html" class="list-group-item list-group-item-action  side-nav-one"><i class="fa fa-file-text-o side-icon" aria-hidden="true"></i>Over view</a>
             <a href="#" class="list-group-item list-group-item-action  side-nav-one"><i class="fa fa-table side-icon" aria-hidden="true"></i>Events</a>
             <a href="#" class="list-group-item list-group-item-action  side-nav-one"><i class="fa fa-user side-icon" aria-hidden="true"></i>Profile</a>
             <a href="#" class="list-group-item list-group-item-action  side-nav-one">Status</a>
@@ -128,74 +128,7 @@
             </div>
 
           </div>
-          <div class="container-fluid">
-            <div class="row">
-                <div class="col-lg-4 col-md-6 col-sm-12 creat-a">
-                    <h4>Create-Account</h4>
-                </div>
-              <div class="col-lg-7 col-md-6 col-sm-12 col-sm-12">
-                <form class="client-list-login">
-                    
-                    <div class="form-row">
-                      <div class="form-group col-md-6 col-sm-12">
-                        <label for="inputname">Name</label>
-                        <input type="text" class="form-control" id="inputname">
-                      </div>
-                      <div class="form-group col-md-6 col-sm-12">
-                        <label for="inputPassword4">Password</label>
-                        <input type="password" class="form-control" id="inputPassword4">
-                      </div>
-                    </div>
-                    <div class="form-row">
-                        <div class="form-group col-md-6 col-sm-12">
-                          <label for="inputs-name">Store-Name</label>
-                          <input type="text" class="form-control" id="inputs-name">
-                        </div>
-                    <div class="form-group col-md-6 col-sm-12">
-                      <label for="inputnumber">Contact</label>
-                      <input type="tel" class="form-control" id="inputnumber" placeholder="+91-9952870943">
-                    </div>
-                    </div>
-                    <div class="row">
-                        <div class="form-group col-md-6 col-sm-12">
-                            <label for="inputAddress">Address</label>
-                            <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
-                          </div>
-                    <div class="form-group col-lg-6 col-sm-12">
-                      <label for="inputAddress2">Address 2</label>
-                      <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
-                    </div>
-                    </div>
-                    <div class="form-row">
-                      <div class="form-group col-md-6 col-sm-12">
-                        <label for="inputCity">City</label>
-                        <input type="text" class="form-control" id="inputCity">
-                      </div>
-                      <div class="form-group col-md-4 col-sm-8">
-                        <label for="inputState">State</label>
-                        <select id="inputState" class="form-control">
-                          <option selected>Choose...</option>
-                          <option>...</option>
-                        </select>
-                      </div>
-                      <div class="form-group col-md-2 col-sm-6">
-                        <label for="inputZip">Zip</label>
-                        <input type="text" class="form-control" id="inputZip">
-                      </div>
-                    </div>
-                    <div class="form-group">
-                      <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="gridCheck">
-                        <label class="form-check-label" for="gridCheck">
-                          Check me out
-                        </label>
-                      </div>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Sign in</button>
-                  </form>
-              </div>
-              </div>
-            </div>
+          
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-10 col-sm-4 col-md-10 table-one">
