--- a/template/style/style.css
+++ b/template/style/style.css
@@ -1,18 +1,21 @@
 body{
     /* background-color: #F5F6F8; */
-    background-color: rgb(172, 177, 187);
+    background-color: rgb(36, 90, 199);
+    width: 100%;
    
 }
-.total{
-    margin-left: 216px;
+.t-one .total{
+    margin-left: 250px;
+    background-color: rgb(244,245,247);
+  
 }
-.header{
+
+
+.header .header-two{
     /* box-shadow: 0 2px 0 rgba(90,97,105,.11), 0 4px 8px rgba(90,97,105,.12), 0 10px 10px rgba(90,97,105,.06), 0 7px 70px rgba(90,97,105,.1) ; */
   height: 3.35rem;
   }
-.header .header-one{
-    width: 103%;
-}
+
 .header-one .bell-icon .b-icon{
     padding-right: 18px;
     margin-top: 15px;
@@ -60,8 +63,8 @@ body{
     color: #abb6bf;
 }
 
-.side-nav{
-    width: 13.5rem;
+.t-one .side-nav{
+    width: 15.5rem;
     box-shadow: 0 5px 0 rgba(90,97,105,.11), 0 4px 8px rgba(90,97,105,.12), 0 10px 10px rgba(90,97,105,.06), 0 7px 70px rgba(90,97,105,.1) ;
     height: 41rem;
     position: fixed;
@@ -84,9 +87,11 @@ body{
 .list-group .list-group-item .side-icon{
     padding-right: 10px;
 }
-.dashboard{
-    margin-top: 21px;
+ .container .dash-b{
+    margin-left:100px ;
 }
+
+
 .dashboard .page-header .page-title{
 
     font-size: 1.625rem;
@@ -104,14 +109,27 @@ body{
 }
     .post{
         box-shadow: 0 2px 0 rgba(90,97,105,.11), 0 4px 8px rgba(90,97,105,.12), 0 10px 10px rgba(90,97,105,.06), 0 7px 70px rgba(90,97,105,.1);
-margin: 10px;
+/* margin: 10px; */
 border: none;
 max-height: 7.9rem;
 
 }
 .boxshow .boxshow-1{
-    max-width: 13.400rem;
-    padding-left: 30px;
+    max-width: 14rem;
+}
+.boxshow .boxshow-1 .post{
+    /* max-width: 14.400rem; */
+    /* margin: 5px; */
+    /* padding-left: 30px; */
+    color: #ffffff;
+    border-radius: 8px;
+max-width: 14rem;
+
+}
+.boxshow .boxshow-1 .post span{
+    color: black;
+    margin-bottom: 10px;
+
 }
 
  
@@ -134,13 +152,14 @@ max-height: 7.9rem;
 .customer,.deliver {
     box-shadow: 0 5px 0 rgba(90,97,105,.11), 0 4px 8px rgba(90,97,105,.12), 0 10px 10px rgba(90,97,105,.06), 0 7px 70px rgba(90,97,105,.1) ;
 margin-top: 20px;
-margin-left: 40px;
+margin: 40px;
+background-color: white;
 }
 .deliver{
-    margin-left: 40px;
+    /* margin-left: 10px; */
 }
 .client-list-login{
-    box-shadow: 0 5px 0 rgba(90,97,105,.11), 0 4px 8px rgba(90,97,105,.12), 0 10px 10px rgba(90,97,105,.06), 0 7px 70px rgba(90,97,105,.1) ;
+  box-shadow: 0 5px 0 rgba(90,97,105,.11), 0 4px 8px rgba(90,97,105,.12), 0 10px 10px rgba(90,97,105,.06), 0 7px 70px rgba(90,97,105,.1) ;
 margin-left: 20px;
 margin-top: 20px;
 width: 105%;
@@ -205,4 +224,10 @@ margin-left:60px;
  .store-two .c-one{
     box-shadow: 0 5px 0 rgba(90,97,105,.11), 0 4px 8px rgba(90,97,105,.12), 0 10px 10px rgba(90,97,105,.06), 0 7px 70px rgba(90,97,105,.1) ;
      
+ }
+ .client-list-login{
+    width: 40rem;
+ }
+ .newcon{
+   
  }
