--- a/template/index.html
+++ b/template/index.html
@@ -20,18 +20,18 @@
   <div class="d-flex t-one" id="wrapper">
 
     <!-- Sidebar -->
-    <div class=" border-right side-nav" id="sidebar-wrapper ">
+    <div class=" border-right side-nav " id="sidebar-wrapper ">
       <div class="sidebar-heading text-center  side-header">FOODIE </div>
       <div class="list-group list-group-flush">
         <a href="index.html" class="list-group-item list-group-item-action  side-nav-one"><i
             class="fa fa-pencil side-icon" aria-hidden="true"></i>Dash board</a>
         <a href="total file/tabel.html" class="list-group-item list-group-item-action  side-nav-one"><i
             class="fa fa-tasks side-icon" aria-hidden="true"></i>Short cuts</a>
-        <a href="total file/foodlist.html" class="list-group-item list-group-item-action  side-nav-one"><i
+        <a href="" class="list-group-item list-group-item-action  side-nav-one"><i
             class="fa fa-file-text-o side-icon" aria-hidden="true"></i>Over view</a>
-        <a href="#" class="list-group-item list-group-item-action  side-nav-one"><i class="fa fa-table side-icon"
+        <a href="total file/events.html" class="list-group-item list-group-item-action  side-nav-one"><i class="fa fa-table side-icon"
             aria-hidden="true"></i>Events</a>
-        <a href="#" class="list-group-item list-group-item-action  side-nav-one"><i class="fa fa-user side-icon"
+        <a href="total file/foodlist.html" class="list-group-item list-group-item-action  side-nav-one"><i class="fa fa-user side-icon"
             aria-hidden="true"></i>Profile</a>
         <a href="#" class="list-group-item list-group-item-action  side-nav-one">Status</a>
       </div>
@@ -44,7 +44,7 @@
 
 
       <div class="row header-one ">
-        <div class="input-group  header-two">
+        <div class="input-group sticky-top bg-white  header-two">
           <i class="fa fa-search s-icon" aria-hidden="true"></i><input type="text" class="form-control searchengin"
             placeholder="Search for something..." aria-label="Recipient's username with two button addons"
             aria-describedby="button-addon4">
@@ -134,20 +134,203 @@
 
 
       <div class="row">
-        <div class="col-lg-5 col-sm-12 col-md-5 customer">
-          <div class=" card-title text-center">
-            <h4 class="cust">Customer Growth</h4>
+
+        <div class="col-lg col-sm-12 col-md-5 customer">
+
+          <div class="col-12 card-header border-bottom bg-white">
+            <h6 class="m-0">Customer Growth</h6>
           </div>
-          <div id="local" style="width: 400px; height: 300px;">
+
+
+          <div class="row border-bottom py-2 bg-light">
+            <div class="col-12 col-sm-6">
+              <div id="blog-overview-date-range"
+                class="input-daterange input-group input-group-sm my-auto ml-auto mr-auto ml-sm-auto mr-sm-0"
+                style="max-width: 350px;">
+                <input type="text" class="input-sm form-control" name="start" placeholder="Start Date"
+                  id="blog-overview-date-range-1">
+                <input type="text" class="input-sm form-control" name="end" placeholder="End Date"
+                  id="blog-overview-date-range-2">
+                <span class="input-group-append">
+                  <span class="input-group-text">
+                    <i class="material-icons"></i>
+                  </span>
+                </span>
+              </div>
+            </div>
+            <div class="col-12 col-sm-6 d-flex mb-2 mb-sm-0">
+              <button type="button" class="btn btn-sm btn-white ml-auto mr-auto ml-sm-auto mr-sm-0 mt-3 mt-sm-0">View
+                Full Report →</button>
+            </div>
+          </div>
+          <div id="local" style="width: 500px; height: 300px;">
 
           </div>
 
         </div>
-        <div class="col-lg-5 col-sm-12 col-md-5 deliver">
-          <div class="card-title text-center">
-            <h4>Delivery Ways</h4>
+        <div class="col-lg col-sm-12 col-md-5 deliver">
+          <div class="card-header border-bottom">
+            <h6 class="m-0">sales</h6>
           </div>
-          <div id="chline" style="width: 460px; height: 300px;"></div>
+
+          <div class="col-xl-12">
+            <div class="card">
+              <div class="card-header border-0 pb-0 d-sm-flex d-block">
+                <div>
+                  <h4 class="card-title mb-1">Trending Items</h4>
+                  <small class="mb-0">Continuesly buy items for customer</small>
+                </div>
+                <div class="dropdown mt-3 mt-sm-0">
+                  <button type="button" class="btn btn-primary dropdown-toggle light fs-14" data-toggle="dropdown"
+                    aria-expanded="false">
+                    Weekly
+                  </button>
+                  <div class="dropdown-menu" x-placement="bottom-start"
+                    style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(0px, 43px, 0px);">
+                    <a class="dropdown-item" href="javascript:void(0);">Daily</a>
+                    <a class="dropdown-item" href="javascript:void(0);">Weekly</a>
+                    <a class="dropdown-item" href="javascript:void(0);">Monthly</a>
+                  </div>
+                </div>
+              </div>
+              <div class="card-body p-0 pt-3">
+                <div class="media items-list-1">
+                  <span class="number col-1 px-0 align-self-center">#1</span>
+                  <a href="ecom-product-detail.html"><img class="img-fluid rounded mr-3" width="85"
+                      src="../template/image/briyani.jpg" alt="DexignZone"></a>
+                  <div class="media-body col-sm-4 col-6 col-xxl-5 px-0">
+                    <h5 class="mt-0 mb-3"><a class="text-black" href="ecom-product-detail.html">CHICKEN BRIYANI</a></h5>
+                    <small class="font-w500"><strong class="text-secondary mr-2">$150</strong> <a class="text-primary"
+                        href="javascript:void(0);">BRIYANI</a></small>
+                  </div>
+                  <div class="media-footer ml-auto col-3 px-0 d-flex align-self-center align-items-center">
+                    <div class="mr-3">
+                      <span class="peity-success" data-style="width:100%;" style="display: none;">0,2,1,4</span><svg
+                        class="peity" height="30" width="47">
+                        <polygon fill="rgba(48, 194, 89, .2)"
+                          points="0 28.5 0 28.5 15.666666666666666 15 31.333333333333332 21.75 47 1.5 47 28.5">
+                        </polygon>
+                        <polyline fill="none" points="0 28.5 15.666666666666666 15 31.333333333333332 21.75 47 1.5"
+                          stroke="#30c259" stroke-width="3" stroke-linecap="square"></polyline>
+                      </svg>
+                    </div>
+                    <div>
+                      <h3 class="mb-0 font-w600 text-black">524</h3>
+                      <span class="fs-14">Sales (12%)</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="media items-list-1">
+                  <span class="number col-1 px-0 align-self-center">#2</span>
+                  <a href="ecom-product-detail.html"><img class="img-fluid rounded mr-3" width="85"
+                      src="./images/dish/pic2.jpg" alt="DexignZone"></a>
+                  <div class="media-body col-sm-4 col-6 col-xxl-5 px-0">
+                    <h5 class="mt-0 mb-3 text-black"><a class="text-black" href="ecom-product-detail.html">Tuna soup
+                        spinach with himalaya salt</a></h5>
+                    <small class="font-w500"><strong class="text-secondary mr-2">$12.56</strong> <a class="text-primary"
+                        href="javascript:void(0);">JUICE</a></small>
+                  </div>
+                  <div class="media-footer ml-auto col-3 px-0 d-flex align-self-center align-items-center">
+                    <div class="mr-3">
+                      <span class="peity-danger" data-style="width:100%;" style="display: none;">4,1,2,0</span><svg
+                        class="peity" height="30" width="47">
+                        <polygon fill="rgba(248, 79, 78, .2)"
+                          points="0 28.5 0 1.5 15.666666666666666 21.75 31.333333333333332 15 47 28.5 47 28.5">
+                        </polygon>
+                        <polyline fill="none" points="0 1.5 15.666666666666666 21.75 31.333333333333332 15 47 28.5"
+                          stroke="#f84f4e" stroke-width="3" stroke-linecap="square"></polyline>
+                      </svg>
+                    </div>
+                    <div>
+                      <h3 class="mb-0 font-w600 text-black">215</h3>
+                      <span class="fs-14">Sales (12%)</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="media items-list-1">
+                  <span class="number col-1 px-0 align-self-center">#3</span>
+                  <a href="ecom-product-detail.html"><img class="img-fluid rounded mr-3" width="85"
+                      src="./images/dish/pic3.jpg" alt="DexignZone"></a>
+                  <div class="media-body col-sm-4 col-6 col-xxl-5 px-0">
+                    <h5 class="mt-0 mb-3 text-black"><a class="text-black" href="ecom-product-detail.html">Chicken curry
+                        special with cucumber</a></h5>
+                    <small class="font-w500"><strong class="text-secondary mr-2">$12.56</strong> <a class="text-primary"
+                        href="javascript:void(0);">PIZZA</a></small>
+                  </div>
+                  <div class="media-footer ml-auto col-3 px-0 d-flex align-self-center align-items-center">
+                    <div class="mr-3">
+                      <span class="peity-success" data-style="width:100%;" style="display: none;">0,2,1,4</span><svg
+                        class="peity" height="30" width="47">
+                        <polygon fill="rgba(48, 194, 89, .2)"
+                          points="0 28.5 0 28.5 15.666666666666666 15 31.333333333333332 21.75 47 1.5 47 28.5">
+                        </polygon>
+                        <polyline fill="none" points="0 28.5 15.666666666666666 15 31.333333333333332 21.75 47 1.5"
+                          stroke="#30c259" stroke-width="3" stroke-linecap="square"></polyline>
+                      </svg>
+                    </div>
+                    <div>
+                      <h3 class="mb-0 font-w600 text-black">524</h3>
+                      <span class="fs-14">Sales (12%)</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="media items-list-1">
+                  <span class="number col-1 px-0 align-self-center">#4</span>
+                  <a href="ecom-product-detail.html"><img class="img-fluid rounded mr-3" width="85"
+                      src="./images/dish/pic4.jpg" alt="DexignZone"></a>
+                  <div class="media-body col-sm-4 col-6 col-xxl-5 px-0">
+                    <h5 class="mt-0 mb-3 text-black"><a class="text-black" href="ecom-product-detail.html">Watermelon
+                        juice with ice</a></h5>
+                    <small class="font-w500"><strong class="text-secondary mr-2">$12.56</strong> <a class="text-primary"
+                        href="javascript:void(0);">PIZZA</a></small>
+                  </div>
+                  <div class="media-footer ml-auto col-3 px-0 d-flex align-self-center align-items-center">
+                    <div class="mr-3">
+                      <span class="peity-success" data-style="width:100%;" style="display: none;">0,2,1,4</span><svg
+                        class="peity" height="30" width="47">
+                        <polygon fill="rgba(48, 194, 89, .2)"
+                          points="0 28.5 0 28.5 15.666666666666666 15 31.333333333333332 21.75 47 1.5 47 28.5">
+                        </polygon>
+                        <polyline fill="none" points="0 28.5 15.666666666666666 15 31.333333333333332 21.75 47 1.5"
+                          stroke="#30c259" stroke-width="3" stroke-linecap="square"></polyline>
+                      </svg>
+                    </div>
+                    <div>
+                      <h3 class="mb-0 font-w600 text-black">76</h3>
+                      <span class="fs-14">Sales (12%)</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="media items-list-1">
+                  <span class="number col-1 px-0 align-self-center">#5</span>
+                  <a href="ecom-product-detail.html"><img class="img-fluid rounded mr-3" width="85"
+                      src="./images/dish/pic5.jpg" alt="DexignZone"></a>
+                  <div class="media-body col-sm-4 col-6 col-xxl-5 px-0">
+                    <h5 class="mt-0 mb-3 text-black"><a class="text-black" href="ecom-product-detail.html">Tuna soup
+                        spinach with himalaya salt</a></h5>
+                    <small class="font-w500"><strong class="text-secondary mr-2">$12.56</strong> <a class="text-primary"
+                        href="javascript:void(0);">BURGER</a></small>
+                  </div>
+                  <div class="media-footer ml-auto col-3 px-0 d-flex align-self-center align-items-center">
+                    <div class="mr-3">
+                      <span class="peity-danger" data-style="width:100%;" style="display: none;">4,1,2,0</span><svg
+                        class="peity" height="30" width="47">
+                        <polygon fill="rgba(248, 79, 78, .2)"
+                          points="0 28.5 0 1.5 15.666666666666666 21.75 31.333333333333332 15 47 28.5 47 28.5">
+                        </polygon>
+                        <polyline fill="none" points="0 1.5 15.666666666666666 21.75 31.333333333333332 15 47 28.5"
+                          stroke="#f84f4e" stroke-width="3" stroke-linecap="square"></polyline>
+                      </svg>
+                    </div>
+                    <div>
+                      <h3 class="mb-0 font-w600 text-black">180</h3>
+                      <span class="fs-14">Sales (12%)</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
 
@@ -344,94 +527,18 @@
   <script type="text/javascript">
     var charttwo = echarts.init(document.getElementById("local"));
     option = {
-      tooltip: {
-        trigger: 'axis',
-        axisPointer: {
-          type: 'shadow'
-        }
-      },
-      legend: {
-        data: ['FIRST-W', 'SW', 'SW', 'TW', 'FW', 'FW-L1', 'FW-L2', 'FW-L3']
-      },
-      grid: {
-        left: '3%',
-        right: '4%',
-        bottom: '3%',
-        containLabel: true
-      },
-      xAxis: [{
+      xAxis: {
         type: 'category',
-        data: ['JAN', 'FEB', 'MAR', 'APR', 'MAY', 'JUNE', 'JULY']
-      }],
-      yAxis: [{
+        data: ['JAN', 'FEB', 'MAR', 'APR', 'MAY', 'JUN', 'JULY']
+      },
+      yAxis: {
         type: 'value'
-      }],
+      },
       series: [{
-          name: 'FIRST-W',
-          type: 'bar',
-          data: [320, 332, 301, 334, 390, 330, 320]
-        },
-        // {
-        //     name: 'SW-M',
-        //     type: 'bar',
-        //     stack: '广告',
-        //     data: [120, 132, 101, 134, 90, 230, 210]
-        // },
-        {
-          name: 'SW',
-          type: 'bar',
-          stack: '广告',
-          data: [620, 582, 691, 634, 690, 630, 620]
-        },
-        // {
-        //     name: 'SW-L',
-        //     type: 'bar',
-        //     stack: '广告',
-        //     data: [150, 232, 201, 154, 190, 330, 410]
-        // },
-        {
-          name: 'TW',
-          type: 'bar',
-          data: [862, 1018, 964, 1026, 1679, 1600, 1570],
-          markLine: {
-            lineStyle: {
-              type: 'dashed'
-            },
-            data: [
-              [{
-                type: 'min'
-              }, {
-                type: 'max'
-              }]
-            ]
-          }
-        },
-        {
-          name: 'FW',
-          type: 'bar',
-          barWidth: 5,
-          stack: '搜索引擎',
-          data: [620, 732, 701, 734, 1090, 1130, 1120]
-        },
-        // {
-        //     name: '谷歌',
-        //     type: 'bar',
-        //     stack: '搜索引擎',
-        //     data: [120, 132, 101, 134, 290, 230, 220]
-        // },
-        // {
-        //     name: '必应',
-        //     type: 'bar',
-        //     stack: '搜索引擎',
-        //     data: [60, 72, 71, 74, 190, 130, 110]
-        // },
-        // {
-        //     name: '其他',
-        //     type: 'bar',
-        //     stack: '搜索引擎',
-        //     data: [62, 82, 91, 84, 109, 110, 120]
-        // }
-      ]
+        data: [820, 932, 901, 934, 1290, 1330, 1320],
+        type: 'line',
+        smooth: true
+      }]
     };
 
     charttwo.setOption(option);
